--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="TheTexty"
+      name="description"
       content="TextUtils is a versatile text manipulation tool designed to simplify tasks such as formatting, analyzing, and transforming text. With features like text formatting, word count, character count, case conversion, and more, TextUtils offers a user-friendly interface for enhancing productivity. Whether you're a writer, student, or professional, TextUtils provides essential tools to streamline your text-related tasks. Explore the power of TextUtils today and unlock new possibilities for managing your text effectively!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
