--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>TheTexty-Your Text Processor</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4138342195936642"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
