--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,18 @@
     <title>TheTexty-Your Text Processor</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4138342195936642"
      crossorigin="anonymous"></script>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4138342195936642"
+     crossorigin="anonymous"></script>
+<!-- myads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4138342195936642"
+     data-ad-slot="1923297979"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
